--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,7 @@
   padding: 0;
 }
 body{
-  border: rgb(0, 0, 0) solid 5px;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(0,0,0);
   color: rgb(0, 0, 0);
 }
 /* for header section*/
@@ -117,4 +116,45 @@ padding: 10px;
 .footer img{
   width: 100%;
   padding-top: 10px;
+}
+.form-section{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  background-color: white;
+}
+
+.form-Div input{
+height: 30px;
+width: 350px;
+}
+.form-Div button{
+  justify-content: center;
+  justify-content: center;
+  align-items: center;
+  width: 80px;
+  height: 30px;
+  border-radius: 5px;
+  padding: 5px 15px;
+  background-color: blue;
+  color: white;
+  margin: 10px 0;
+  cursor: pointer;
+}
+
+.form-Div button:hover{
+  background-color: white;
+  color: blue;
+  transition: ease-in;
+}
+.form-Div button:active{
+  background-color: blue;
+  color: white;
+}
+h1{
+  display: flex;
+  flex-direction: row;
+  color: black;
 }
